--- a/style/menystyle.css
+++ b/style/menystyle.css
@@ -109,7 +109,7 @@
     margin: auto;
 }
 
-.menu-item__heading {
+.meny_overskrift {
     font-family: gooddog-new, sans-serif;
     font-size: 45px;
     font-weight: 400;
@@ -119,7 +119,7 @@
     letter-spacing: 1px;
 }
 
-.menu-item__name {
+.type_rett {
     font-family: fira sans, sans-serif;
     font-size: 20px;
     font-weight: bold;
@@ -133,14 +133,14 @@
     margin-bottom: 20px;
 }
 
-.menu-item__description {
+.rett_innhold {
     font-family: fira sans, sans-serif;
     font-size: 17px;
     letter-spacing: 1px;
     color: #3F3F3F;
 }
 
-.menu-item__allergener {
+.rett_allergener {
     font-family: fira sans, sans-serif;
     font-size: 13px;
     margin-top: 10px;
@@ -160,7 +160,7 @@
     line-height: 1.8;
 }
 
-.boxLunch {
+.boxLunsj {
     width: 100%;
     min-height: 200px;
     float: left;
