--- a/style/style.css
+++ b/style/style.css
@@ -45,5 +45,6 @@ body {
 /*Responsive navigation menu for mobile devices */
 @media screen and (max-width: 480px) {
     .navbar-home {
-        
+
+    }
 }
