--- a/style/menystyle.css
+++ b/style/menystyle.css
@@ -119,10 +119,14 @@ h3{
     padding-top: 0.6rem;
 }
 
-.frokostmeny{
+.frokostmeny {
     margin-top: 1.5rem;
     padding: 3rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
+
 
 /*Hvordan fjerne at teksten wrappes under bildet?*/
 
@@ -130,15 +134,14 @@ h3{
 /*https://unsplash.com/photos/vLHzjRNFbEQ*/
 .frokostmeny img{
     height: 30rem;
-    margin: 6rem 0rem 2rem 3rem;
+    margin: 6rem 1rem 2rem 3rem;
     border-radius: 2%;
-    float: right;
-
 }
  /*Hvordan få bilde midtstilt? */
 @media only screen and (max-width: 600px) {
-   .frokostmeny img{
-    margin-top: auto;
+   .frokostmeny {
+    flex-direction: column;
+    align-items: center;
    }
 }
 
