--- a/style/menystyle.css
+++ b/style/menystyle.css
@@ -5,7 +5,7 @@
     background-color: #f1ece8;
     color: #3F3F3F;
     font-family: "Courier New"; /* Legge inn fallback value? */
-    /*border: solid red 1px;*/
+    border: solid red 1px;
 }
 
 @font-face {
@@ -121,10 +121,23 @@ h3{
 
 .frokostmeny {
     margin-top: 1.5rem;
-    padding: 3rem;
+    padding: 1rem;
     display: flex;
     flex-direction: row;
     justify-content: center;
+}
+
+.tittel {
+    text-align: center;
+    margin-top: 3rem;
+}
+
+.box-meny {
+    padding: 3rem;
+}
+
+.minitittel {
+    width: 40vw;
 }
 
 
@@ -134,11 +147,10 @@ h3{
 /*https://unsplash.com/photos/vLHzjRNFbEQ*/
 .frokostmeny img{
     height: 30rem;
-    margin: 6rem 1rem 2rem 3rem;
     border-radius: 2%;
 }
  /*Hvordan få bilde midtstilt? */
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 850px) {
    .frokostmeny {
     flex-direction: column;
     align-items: center;
