--- a/style/bookingstyle.css
+++ b/style/bookingstyle.css
@@ -343,11 +343,11 @@ a div {
 
 
 
-@media only screen and (max-width: 820px) {
+@media only screen and (max-width: 850px) {
     * {
         margin: 0 auto;
-        /*outline: 1px solid red;
-        outline-offset: -1px;*/
+        outline: 1px solid red;
+        outline-offset: -1px;
     }
     
     
@@ -705,7 +705,7 @@ a div {
 
 
 
-@media only screen and (max-width: 30rem) {
+@media only screen and (max-width: 480px) {
     * {
         margin: 0 auto;
         /*outline: 1px solid red;
