--- a/style/menystyle.css
+++ b/style/menystyle.css
@@ -118,10 +118,27 @@ h3{
     padding-top: 0.6rem;
 }
 
-.frokostmeny{
+.frokostmeny {
     margin-top: 1.5rem;
+    padding: 1rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.tittel {
+    text-align: center;
+    margin-top: 3rem;
+}
+
+.box-meny {
     padding: 3rem;
 }
+
+.minitittel {
+    width: 40vw;
+}
+
 
 /*Hvordan fjerne at teksten wrappes under bildet?*/
 
@@ -129,15 +146,13 @@ h3{
 /*https://unsplash.com/photos/vLHzjRNFbEQ*/
 .frokostmeny img{
     height: 30rem;
-    margin: 6rem 0rem 2rem 3rem;
     border-radius: 2%;
-    float: right;
-
 }
  /*Hvordan få bilde midtstilt? */
-@media only screen and (max-width: 600px) {
-   .frokostmeny img{
-    margin-top: auto;
+@media only screen and (max-width: 850px) {
+   .frokostmeny {
+    flex-direction: column;
+    align-items: center;
    }
 }
 
