--- a/style/bookingstyle.css
+++ b/style/bookingstyle.css
@@ -352,24 +352,11 @@ a div {
     
     
     body {
-        font-family: 'Roboto', sans-serif;
-        background-color: #f5fffa;
-        color:#382c20;
         font-weight: 300;
         line-height: 1.7rem;
         letter-spacing: 0.02rem;
         position: relative;   
     }
-    
-    /*
-    header {
-    
-    }
-    
-    main {
-        
-    }
-    */
     
     h2 {
         letter-spacing: 0.1rem;
@@ -392,26 +379,17 @@ a div {
     }
     
     .booking-boks {
-        width: 50rem;
+        width: 90%;
         text-align: center;
         margin-top: 4rem;
     }
     
     .booking-link {
         font-size: 1.3rem;
-        background-color: #5ca5ad;
         padding: 0.6rem 3rem;
-        text-decoration: none;
-        color: #f5fffa;
         border-radius: 0.8rem;
         letter-spacing: 0.1rem;
-        transition: 0.5s;
     }
-    
-    .booking-link:hover {
-        background-color: #38696f;
-    }
-    
     
     .kort-info {
         height: 13rem;
@@ -419,7 +397,7 @@ a div {
     }
     
     .bredde1 {
-        width: 50rem;
+        width: 90%;
         display: flex;
         justify-content: space-between;
         padding-top: 4.8rem;
@@ -440,15 +418,9 @@ a div {
         font-size: 1.2rem;
         letter-spacing: 0.1rem;
     }
-    
-    #areal {
-        font-size: 1.2rem;
-        /*position: absolute;
-        margin-left: 0.1rem;*/
-    }
-    
+
     .mer-info {
-        width: 35rem;
+        width: 80%;
         display: flex;
         justify-content: space-between;
         margin-top: 5rem;
@@ -477,9 +449,11 @@ a div {
         text-align: right;
     }
     
+
+
     
     .lokasjon {
-        width: 50rem;
+        width: 90%;
         display: flex;
         justify-content: space-between;
         margin-top: 5rem;
@@ -496,6 +470,9 @@ a div {
     
     .info-om-lokasjon {
         margin: 0rem;
+        display: flex;
+        justify-content: flex-end;
+        flex-direction: column;
     }
     
     .info-om-lokasjon h2 {
@@ -699,13 +676,12 @@ a div {
 @media only screen and (max-width: 480px) {
     * {
         margin: 0 auto;
-        /*outline: 1px solid red;
-        outline-offset: -1px;*/
+        outline: 1px solid red;
+        outline-offset: -1px;
     } 
     
     body {
         font-size: 0.9rem;
-        font-weight: 300;
         line-height: 1.5rem;
         letter-spacing: 0rem;
         position: relative;   
@@ -717,7 +693,7 @@ a div {
     }
     
     h1 {
-        font-size: 1.7rem;
+        font-size: 1.8rem;
         line-height: 2.5rem;
         text-align: center;
         margin-top: 3rem;
@@ -734,33 +710,25 @@ a div {
     }
     
     .booking-boks {
-        width: 22rem;
+        width: 90%;
         text-align: center;
         margin-top: 3rem;
     }
     
     .booking-link {
-        font-size: 1.3rem;
-        padding: 0.6rem 3rem;
-        text-decoration: none;
+        font-size: 1.2rem;
+        padding: 0.5rem 2rem;
         border-radius: 0.8rem;
         letter-spacing: 0.1rem;
     }
-    
-    .booking-link:hover {
-        background-color: #5ca5ad;
-    }
-    
-    
+
     .kort-info {
-        background-color: #d1eacd;
-        color: #382c20;
         height: 17rem;
         margin-top: 3rem;
     }
     
     .bredde1 {
-        width: 20rem;
+        width: 90%;
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
@@ -774,7 +742,7 @@ a div {
     }
     
     .kapasitet h3 {
-    font-size: 2.2rem;
+    font-size: 2rem;
     padding-bottom: 0.5rem;
     letter-spacing: 0.1rem;
     }
@@ -783,17 +751,9 @@ a div {
         font-size: 1.2rem;
         letter-spacing: 0.1rem;
     }
-    
-    #areal {
-        font-size: 1.2rem;
-        position: absolute;
-    }
-    
-
-
 
     .mer-info {
-        width: 22rem;
+        width: 80%;
         display: flex;
         justify-content: space-between;
         margin-top: 3rem;
@@ -827,7 +787,7 @@ a div {
 
     
     .lokasjon {
-        width: 22rem;
+        width: 90%;
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
@@ -836,7 +796,7 @@ a div {
     
     .kart {
         filter: grayscale();
-        width: 90%;
+        width: 100%;
         height: 16rem;
         border: 0;
         margin: 0rem;
@@ -867,7 +827,7 @@ a div {
     }
     
     .bredde2 {
-        width: 22rem;
+        width: 90%;
         line-height: 1.5rem;
         padding-top: 3rem;
     }
@@ -898,7 +858,7 @@ a div {
     
     
     
-    .container {
+    .bilder {
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
@@ -908,8 +868,8 @@ a div {
     }
      
     .small {
-        width: 10.8rem;
-        height: 10.8rem;
+        width: 9rem;
+        height: 9rem;
         object-fit: cover;
         margin: 0;
         border-radius: 0.8rem;
@@ -1020,34 +980,7 @@ a div {
         transition: 0.5s;
     }
     
-    .booking-button:hover {
-        background-color: #38696f;
-    }
-    
     ::placeholder {
         color: #5ca5ad;
-    }
-    
-    /* Header flyttes */
-    header {
-        justify-content: flex-start;
-    }
-    
-    header img {
-        width: 10rem;
-    }
-
-    
-    /* Navbar gjemmes i toggle menu */
-    nav {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    
-    /* Info i footer går over til kolonne */
-    .rad-footer {
-        flex-direction: column;
-        align-items: center;
     }
   }
