--- a/style/style.css
+++ b/style/style.css
@@ -3,8 +3,11 @@
     padding: 0;
     box-sizing: border-box;
     background-color: #f1ece8;
-    color: #3F3F3F;
-    font-family: "Courier New"; /* Legge inn fallback value? */
+    color:#382c20;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    line-height: 1.7rem;
+    letter-spacing: 0.02rem;
 }
 
 /* Header */
